--- a/1_1_qingchun4.html
+++ b/1_1_qingchun4.html
@@ -1,110 +1,160 @@
 <!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>铁越集团</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-  <div class="page zhigong1 tdc-detail">
-    <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/zhigong/zhilist_02.png"></div>
-        <div class="col-md-4"></div>
-      </div>
-    </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>团员活动 - 青春风采 - 铁越集团</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css" /></head>
 
-    <div class="main">
-      <div class="main-content">
-
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>青春风采</h3>
-              
-            </div>
-
-            <div class=" bodypart" style="background: transparent;">
-              <p class="desc typing-ani" style="background:transparent">
-                <span class="text">青春风采 无悔青春！！！青春风采 无悔青春！！！。
-                </span>
-              </p>
-            </div>
-
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <ul class="jiandanglist1">
-                <li><a href="./1_1_zhigong3.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_06.png" class="img-fullw" style="background-color:#187FC3"></div>
-                  <p> 工会组织架构 </p>
-                </a>
-                </li>
-                <li><a href="./qingchun2.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_09.png" class="img-fullw"></div>
-                  <p> 团组织建设 </p>
-                </a></li>
-
-                <!--<li><a href="./1_1_zhigong2.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_03.png" class="img-fullw"></div>-->
-                  <!--<p> 帮扶救助 </p></a>-->
-                <!--</li>-->
-                <li style="clear:both"><a href="./1_1_zhigong6.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_15.png" class="img-fullw"></div>
-                  <p> 团员阵地 </p></a>
-                </li>
-                <li><a href="./1_1_zhigong5.html" class="image-wrapper"><div class=""><img src="./images/zhigong/zhilist_18.png" class="img-fullw"></div>
-                  <p> 团员活动 </p></a>
-                </li>
-              </ul>
-            </div>
-          </div>
+  <body>
+    <div class="page qingchun2 tdc-detail">
+      <div class="container">
+        <div class="logo">
+          <img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <img src="./images/qingchun/qingchun-log.png"></div>
+          <div class="col-md-4"></div>
         </div>
       </div>
-    </div>
-  </div>
+      <div class="main ">
+        <div class="main-content" style="">
+          <div class="container">
+            <div class="">
+              <div id="image_gallery" class="" style="width: 85%; margin: 0 auto;">
+                <div style="padding: 0 5px 15px;">
+                  <h2>
+                    <font color="white">团员活动</font></h2>
+                  <img src="./images/tiao_03.png" class="" style=" height: 10px; width: 180px;"></div>
+                <div class="grid" style="display:none;">
+                  <div class="clearfix">
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i1.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i1s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i2.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i2s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i3.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i3s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i4.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i4s.jpg" class="" style=" "></a>
+                    </div>
+                  </div>
+                  <div class="clearfix">
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i5.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i5s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i6.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i6s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i7.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i7s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i8.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i8s.jpg" class="" style=" "></a>
+                    </div>
+                  </div>
+                  <div class="clearfix">
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i9.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i9s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i10.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i10s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i11.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i11s.jpg" class="" style=" "></a>
+                    </div>
+                    <div class="col-md-3">
+                      <a href="images/qingchun4/i12.jpg" data-lightbox="lightbox">
+                        <img src="./images/qingchun4/i12s.jpg" class="" style=" "></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper swiper-container" style="padding: 0 5px;">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i1.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i2.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i4.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i3.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i5.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i6.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i7.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i8.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i9.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i10.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i11.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i12.jpg"></div>
+                    <div class="swiper-slide">
+                      <img src="images/qingchun4/i1.jpg"></div>
+                  </div>
+                </div>
+                <!--swiper end--></div>
+              <!--col-md-10 end--></div>
+          </div>
+          <!--container end--></div>
+        <!--main-content end--></div>
+      <!--main end--></div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
       <div class="content">
         <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
-
-        <div class="col-md-9 rightpart" >
+          <!--<a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">-->
+          <!--<span class="glyphicon glyphicon-film" aria-hidden="true"></span>-->
+          <!--<span>		视频 </span>-->
+          <!--</a>--></div>
+        <div class="col-md-9 rightpart">
           <div class="pull-right">
-            <a class="back-btn ctl_btn" href="1_jiandang.html" > 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/zhigong/职工之家.ogg" type="audio/ogg" />
-            </audio>
+            <a class="back-btn ctl_btn" href="1_1_qingchun.html?noaudio=1">返回</a>
+            <a class="back-home-btn ctl_btn" href="index.html">主页</a>
+            <a class="play-audio-btn ctl_btn" href="javascript:void(0)">
+              <span class="glyphicon glyphicon-volume-off" aria-hidden="true"></span>
+            </a>
+            <audio id="audio-js" class="audio-js" loop='loop' autoplay="autoplay">
+              <source src="audios/qingchun/团员活动-我们正年轻.ogg" type="audio/ogg" /></audio>
           </div>
         </div>
       </div>
     </nav>
+    <!-- Modal --></div>
+    <script src="scripts/jquery-1.9.1.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/swiper.jquery.min.js"></script>
+    <script src="scripts/swiper.animate.min.js"></script>
+    <script src="scripts/video.js"></script>
+    <script src="scripts/lightbox.min.js"></script>
+    <script src="scripts/typing-animate.js"></script>
+    <script src="scripts/app.js"></script>
+  </body>
 
-    <!-- Modal -->
-
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
-
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
-</body>
 </html>
