--- a/1_1_qingchun.html
+++ b/1_1_qingchun.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>铁越集团</title>
+    <title>青春风采-铁越集团</title>
     <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
