--- a/1_1_qingchun.html
+++ b/1_1_qingchun.html
@@ -49,13 +49,13 @@
                     <div id="image_list" class=" bodypart">
                         <ul class="jiandanglist1">
 
-                            <li style="margin-right: 100px;"><a href="./1_1_qingchun1.html" class="image-wrapper">
+                            <li style="width: 300px;height:220px;margin-right: 90px;"><a href="./1_1_qingchun1.html" class="image-wrapper">
                                 <div class=""><img src="./images/qingchun/i1.png" class="img-fullw"
                                                    style="background-color:#187FC3;"></div>
                                 <p> 团组织架构 </p>
                             </a></li>
 
-                            <li><a href="./1_1_qingchun2.html" class="image-wrapper">
+                            <li style="width: 300px;height:220px;"><a href="./1_1_qingchun2.html" class="image-wrapper">
                                 <div class=""><img src="./images/qingchun/i2.png" class="img-fullw"></div>
                                 <p> 团组织建设 </p></a></li>
 
@@ -63,11 +63,11 @@
                             <!--<p> 帮扶救助 </p></a>-->
                             <!--</li>-->
 
-                            <li style="clear:both;margin-right: 100px;"><a href="./1_1_qingchun3.html" class="image-wrapper">
+                            <li style="width: 300px;height:220px;clear:both;margin-right: 90px;"><a href="./1_1_qingchun3.html" class="image-wrapper">
                                 <div class=""><img src="./images/qingchun/i3.png" class="img-fullw"></div>
                                 <p> 团员阵地 </p></a></li>
 
-                            <li><a href="./1_1_qingchun4.html" class="image-wrapper">
+                            <li style="width: 300px;height:220px;"><a href="./1_1_qingchun4.html" class="image-wrapper">
                                 <div class=""><img src="./images/qingchun/i4.png" class="img-fullw"></div>
                                 <p> 团员活动 </p></a>
                             </li>
