--- a/1_1_jiandang3.html
+++ b/1_1_jiandang3.html
@@ -79,6 +79,7 @@
                   <div class="swiper-slide">	<img src="images/jiandang3/i10.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang3/i11.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang3/i12.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang3/i1.jpg">	</div>
                 </div>
               </div>
             </div>
