--- a/1_1_zhigong4.html
+++ b/1_1_zhigong4.html
@@ -99,6 +99,7 @@
                   <div class="swiper-slide"><img src="images/zhigong4/i8.jpg"></div>
                   <div class="swiper-slide"><img src="images/zhigong4/i9.jpg"></div>
                   <div class="swiper-slide"><img src="images/zhigong4/i10.jpg"></div>
+                  <div class="swiper-slide"><img src="images/zhigong4/i11.jpg"></div>
                   <div class="swiper-slide"><img src="images/zhigong4/i12.jpg"></div>
                   <div class="swiper-slide"><img src="images/zhigong4/i1.jpg"></div>
                 </div>
