--- a/culture_5.html
+++ b/culture_5.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="title">
-                    感动铁越
+                    感动铁越人物
                 </div>
             </div>
             <div class="video-thumb">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="title">
-                    2017年三八才艺
+                    2017年三八才艺展示
                 </div>
             </div>
             <div class="video-thumb">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="title">
-                    2016年三八才艺
+                    2016年三八才艺展示
                 </div>
             </div>
             <div class="video-thumb">
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="title">
-                    2015年三八才艺
+                    2015年三八才艺展示
                 </div>
             </div>
             <div class="video-thumb">
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="title">
-                    两学一做-白总
+                    白慧涛讲党课
                 </div>
             </div>
             <div class="video-thumb">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="title">
-                    于志斌讲课
+                    于志斌讲党课
                 </div>
             </div>
             <div class="video-thumb">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="title">
-                    王建臣讲课
+                    王建臣讲党课
                 </div>
             </div>
         </div>
